[test] 일정 삭제 구현 테스트 #12